# JoyCon2MappingWebUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  build_release.bat  run_pairing_lab.bat  run_release.bat
transport/: CMakeLists.txt  README.md
transport/include/: ControllerManager.h  JoyCon2InputReportButtons.h  JoyconSdk.h  JoyconTypes.h  NintendoControllerProtocol.h  NintendoControllerTransport.h
transport/src/: ControllerManager.cpp  NintendoControllerProtocol.cpp  NintendoControllerTransport.cpp
transport/tools/: jc2_pairing_lab.cpp
webgui/: CMakeLists.txt
webgui/src/: config_json.cpp  config_json.h  config_store.cpp  config_store.h  control_api.cpp  control_api.h  key_capture_win.cpp  key_capture_win.h  main.cpp  mapper_runtime.cpp  mapper_runtime.h  output_sink.h  sendinput_output_sink.cpp  sendinput_output_sink.h
webgui/web/: app.js  button_metadata.json  i18n.js  index.html  packet_lab.js  style.css
